// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCart debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +1
  </button>
</div>
`;

exports[`ProductCart debe de mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;
